test_suite/ERROR_overriding.out
ERROR_overriding.java: 23:  Semantic Error: Method `overriden` in class: `A` can't override the method with the same id in parent class: `B`
